# Cairn

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  constitution.md  docker-compose.yml  pyproject.toml
docs/: deployment.md  macos-install.md  seed-upload-guide.md
guides/: overview.md
packaging/: README.md  build-macos.sh  cairn.spec  cairn_entry.py  smoke-test.sh  smoke_test.py
packaging/macos-app/: README.md  build-app.sh  cairn-app.spec  cairn_app_entry.py  entitlements.plist  make-dmg.sh  notarize.sh
schemas/: capabilities.md  capability_requirements.md  commitments.md  decision_principle_evaluations.md  decisions.md  drafts.md  great_life_dimensions.md  ideas.md  interests.md  life_units.md  principles.md  projects.md  resources.md  search_index.md  slu_assessments.md  stakeholders.md  suggestions.md
scripts/: mcp-http-bridge.py
skills/: add_inventory_items.md  assess_life_portfolio.md  capture.md  capture_idea.md  define_great_life.md  define_principles.md  digest.md  find.md  inbox.md  inventory_intake.md  opportunity_research.md  patch_portfolio.md  quick_update_slu.md  review_ideas.md  scan_inventory.md  scan_life_units.md  trace.md  update_resources.md
src/meta_assistant/: __init__.py  __main__.py  macos_app.py  remote.py  (+2 more)
tests/: conftest.py  test_e2e.py  test_publish_hardening.py  test_readable_references.py  test_storage.py  test_suggestions.py  test_v3.py  test_v3_1.py  test_v3_2.py  test_v4_inventory.py  test_v5_1_patch_flows.py  test_v5_search.py  test_v6_1_content_access.py  test_v6_2_drafts_rename.py  test_v6_logging.py  test_v7_principles.py  test_v8_ideas.py
